remove angular files from git

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules
 pubspec.lock
 .c9
 .idea/
+.angular/
 .devcontainer/*
 !.devcontainer/README.md
 !.devcontainer/recommended-devcontainer.json
